--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "SSRDEMO",
   "license": "MIT",
+  "sideEffects": false,
   "devDependencies": {
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
     "babel-loader": "^8.2.5",
+    "html-webpack-plugin": "^5.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "ts-loader": "^9.3.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
@@ -16,7 +21,7 @@
     "build:client": "webpack --config webpack.config.client.js",
     "build:server": "webpack --config webpack.config.server.js",
     "build": "yarn build:client && yarn build:server",
-    "dev:client": "webpack-dev-server",
+    "dev:client": "webpack-dev-server --config webpack.config.client.js",
     "start": "node ./src/server"
   }
 }
