--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "qiankun": "^2.7.4"
+    "qiankun": "^2.7.4",
+    "typescript": "^4.8.4"
   }
 }
