--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-env": "7.7.6",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "babel-loader": "^8.2.5",
+    "babel-template": "^6.26.0",
+    "babel-plugin-async-await-add-try-catch": "^1.0.0",
     "css-loader": "^6.7.1",
+    "deepmerge": "^4.2.2",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -42,7 +46,10 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
+    "markdown-it": "^13.0.1",
+    "monaco-editor": "^0.34.1",
     "qiankun": "^2.7.4",
+    "react-intl": "^6.1.2",
     "typescript": "^4.8.4"
   }
 }
