--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist",
-        "target": "es5",
-        "module": "es6",
-        "jsx": "react",
-        "allowSyntheticDefaultImports": true,
-        "moduleResolution": "node",
-    }
+  "compilerOptions": {
+    "outDir": "./dist",
+    "target": "es5",
+    "module": "esnext",
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    // Ensure that Babel can safely transpile files in the TypeScript project
+    // "isolatedModules": true
+  }
 }
