--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "7.7.6",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.18.6",
@@ -11,8 +12,8 @@
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "babel-loader": "^8.2.5",
-    "babel-template": "^6.26.0",
     "babel-plugin-async-await-add-try-catch": "^1.0.0",
+    "babel-template": "^6.26.0",
     "css-loader": "^6.7.1",
     "deepmerge": "^4.2.2",
     "eslint": "^8.17.0",
