--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "devDependencies": {
     "@babel/core": "^7.17.10",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.21.0",
     "@babel/preset-env": "7.7.6",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.18.6",
@@ -46,8 +48,10 @@
     "lint:fix": "npx eslint --fix --ext .js,.tsx src"
   },
   "dependencies": {
+    "ahooks": "^3.7.4",
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
+    "mockjs": "^1.1.0",
     "monaco-editor": "^0.34.1",
     "qiankun": "^2.7.4",
     "react-intl": "^6.1.2",
