--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@babel/preset-env": "7.7.6",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime": "^7.21.0",
+    "@babel/runtime-corejs2": "^7.21.0",
+    "@babel/runtime-corejs3": "^7.21.0",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
