--- a/package.json
+++ b/package.json
@@ -53,11 +53,14 @@
   },
   "dependencies": {
     "ahooks": "^3.7.4",
+    "i18next": "^22.5.0",
+    "i18next-browser-languagedetector": "^7.0.1",
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "mockjs": "^1.1.0",
     "monaco-editor": "^0.34.1",
     "qiankun": "^2.7.4",
+    "react-i18next": "^12.3.1",
     "react-intl": "^6.1.2",
     "typescript": "^4.8.4"
   }
