--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "webpack": "^5.85.0",
+    "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.0"
   },
@@ -49,7 +50,9 @@
     "dev:client": "webpack-dev-server --config webpack.config.client.js",
     "start": "node ./src/server",
     "lint": "npx eslint --ext .js,.jsx,.tsx src",
-    "lint:fix": "npx eslint --fix --ext .js,.tsx src"
+    "lint:fix": "npx eslint --fix --ext .js,.tsx src",
+    "generateAnalyzFile": "webpack --profile --json > dist/stats.json",
+    "analyzer": "webpack-bundle-analyzer --port 8888 ./dist/stats.json"
   },
   "dependencies": {
     "ahooks": "^3.7.7",
