--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "qiankun": "^2.7.4",
     "react-i18next": "^12.3.1",
     "react-intl": "^6.1.2",
+    "styled-components": "^6.0.0-rc.3",
     "typescript": "^4.8.4"
   }
 }
