--- a/package.json
+++ b/package.json
@@ -2,46 +2,21 @@
   "name": "webpack-best-practice",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.22.1",
+    "@babel/core": "^7.22.5",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.22.4",
+    "@babel/plugin-transform-runtime": "^7.22.5",
     "@babel/preset-env": "7.7.6",
-    "@babel/preset-react": "^7.22.3",
-    "@babel/preset-typescript": "^7.18.6",
-    "@babel/runtime": "^7.22.3",
-    "@babel/runtime-corejs2": "^7.22.2",
-    "@babel/runtime-corejs3": "^7.22.3",
-    "@types/react": "^18.2.8",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@babel/runtime": "^7.22.5",
+    "@babel/runtime-corejs2": "^7.22.5",
+    "@babel/runtime-corejs3": "^7.22.5",
+    "@types/react": "^18.2.10",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "babel-loader": "^8.3.0",
-    "babel-plugin-async-await-add-try-catch": "^1.0.0",
-    "babel-template": "^6.26.0",
-    "css-loader": "^6.8.1",
-    "deepmerge": "^4.2.2",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.2.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.32.2",
-    "html-webpack-plugin": "^5.5.1",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.2",
-    "mini-css-extract-plugin": "^2.7.5",
-    "prettier": "^2.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.4.3",
-    "webpack": "^5.85.0",
-    "webpack-bundle-analyzer": "^4.9.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.0"
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "webpack-cli": "^4.10.0"
   },
   "scripts": {
     "build:client": "webpack --config webpack.config.client.js",
@@ -56,16 +31,41 @@
   },
   "dependencies": {
     "ahooks": "^3.7.7",
+    "babel-loader": "^8.3.0",
+    "babel-plugin-async-await-add-try-catch": "^1.0.0",
+    "babel-template": "^6.26.0",
+    "css-loader": "^6.8.1",
+    "deepmerge": "^4.2.2",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.2.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "html-webpack-plugin": "^5.5.2",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
+    "mini-css-extract-plugin": "^2.7.5",
     "mockjs": "^1.1.0",
     "monaco-editor": "^0.34.1",
+    "prettier": "^2.6.2",
     "qiankun": "^2.7.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
-    "react-intl": "^6.1.2",
+    "react-intl": "^6.4.3",
+    "style-loader": "^3.3.3",
     "styled-components": "^6.0.0-rc.3",
-    "typescript": "^4.8.4"
+    "ts-loader": "^9.4.3",
+    "typescript": "^4.8.4",
+    "webpack": "^5.86.0",
+    "webpack-bundle-analyzer": "^4.9.0",
+    "webpack-dev-server": "^4.15.1"
   }
 }
