--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "html-webpack-plugin": "^5.5.2",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
+    "immer": "^10.0.2",
     "less": "^4.1.3",
     "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
